fix overflow

--- a/angularapp/src/styles.scss
+++ b/angularapp/src/styles.scss
@@ -72,7 +72,7 @@ $button: #3f51b5;
 }
 
 .mat-list-base .mat-list-item.mat-2-line {
-  height: 20vh;
+  height: 185.8px;
   padding: 0px;
   margin-bottom: 16px;
   margin-top: 16px;
